// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Fab can have a custom label 1`] = `
<button
  aria-label="bar"
  className="mdc-fab material-icons rmdc-fab--absolute"
  onClick={null}
/>
`;

exports[`components/Fab can have children 1`] = `
<button
  aria-label={null}
  className="mdc-fab material-icons rmdc-fab--absolute"
  onClick={null}
>
  Children are here !
</button>
`;

exports[`components/Fab renders an icon if supplied 1`] = `
<button
  aria-label={null}
  className="mdc-fab material-icons rmdc-fab--absolute"
  onClick={null}
>
  <span
    className="mdc-fab__icon"
  >
    favorite
  </span>
</button>
`;
